--- a/vignettes/RAIDS.Rmd
+++ b/vignettes/RAIDS.Rmd
@@ -1070,7 +1070,7 @@ dataRef <- select1KGPop(gds1KG, nbProfiles=2L)
 closefn.gds(gds1KG)
 
 ## Chromosome length information
-## chr23 is chrX, chr24 is chrY and chrM is 25
+## chrInfo[23] is chrX, chrInfo[24] is chrY and chrM is chrInfo[25]
 chrInfo <- c(248956422L, 242193529L, 198295559L, 190214555L,
  181538259L, 170805979L, 159345973L, 145138636L, 138394717L, 133797422L,
  135086622L, 133275309L, 114364328L, 107043718L, 101991189L, 90338345L,
