--- a/vignettes/Ancestry_Inference_Step_by_Step.Rmd
+++ b/vignettes/Ancestry_Inference_Step_by_Step.Rmd
@@ -97,14 +97,14 @@ These are:
 1. Create a directory containing the 3 reference files from 1KG
 2. Make a SNP pileup file for the profile
 3. Create an RDS file containing information about the samples
-4. Create a Sample GDS file (1 GDS file per sample)
+4. Create a Profile GDS file (one GDS file per profile)
 5. Generate a pruned subset of the single nucleotide variants (SNVs) 
 6. Estimate the allelic frequency for the pruned SNVs
 
-The first steps, from Sub-step 1 to Sub-step 3,  are described in the 
+The first steps, from Sub-step 1 to Sub-step 3, are described in the 
 [Main vigette](RAIDS.html).
 
-### Sub-Step 2.4 Create a profile GDS file (1 GDS file per profile) 
+### Sub-Step 2.4 Create a Profile GDS file (one GDS file per profile) 
 
 This step requires 3 files as input:
 
@@ -199,6 +199,16 @@ list.files(path=pathProfileGDS)
 
 <br>
 
+A **Profile GDS file** is created for each profile. The GDS file contains those 
+nodes:
+
+```{r graphStep24, echo=FALSE, fig.align="left", fig.cap="Step 2.4 - The nodes present in the newly created Profile GDS file (one GDS file per profile).", out.width='100%', results='asis', warning=FALSE, message=FALSE}
+knitr::include_graphics("ProfileGDSdemo_when_created.png")
+```
+
+<br>
+
+
 ### Sub-Step 2.5 Generate a pruned subset of the single nucleotide variants (SNVs) 
 
 The initial list of 1KG SNVs is pruned, using linkage disequilibrium analysis, 
@@ -210,7 +220,7 @@ also requires the path to the **Profile GDS file(s)**.
 
 Note that this step can require large disk space.
 
-```{r pruningSample, echo=TRUE, eval=TRUE, warning=FALSE, message=FALSE}
+```{r pruningProfile, echo=TRUE, eval=TRUE, warning=FALSE, message=FALSE}
 #############################################################################
 ## Load required package
 #############################################################################
@@ -265,9 +275,12 @@ closefn.gds(gds1KG)
 
 <br>
 
-The nodes, with the genotype information for the pruned SNVs, are created in  
-the **Profile GDS file**: 'sample.id', 'snp.id', 'snp.chromosome', 
-'snp.position', 'snp.index', 'genotype' and 'lap'.
+The nodes, with the genotype information for the pruned SNVs, are added into  
+the **Profile GDS file**: 
+
+```{r graphStep25, echo=FALSE, fig.align="left", fig.cap="Step 2.5 - The nodes added to the Profile GDS file are in light blue.", out.width='100%', results='asis', warning=FALSE, message=FALSE}
+knitr::include_graphics("ProfileGDSdemo_after_add1KG2SampleGDS.png")
+```
 
 <br>
 
@@ -277,12 +290,12 @@ The __estimateAllelicFraction()__ estimates the allele fraction for all
 SNVs present in the pruned SNV list. Note that the function requires 
 different inputs for DNA and RNA profiles.
 
-For the DNA samples, these 2 files are required:
+For the DNA profiles, these 2 files are required:
 
 1. The **Profile GDS file**
 2. The **1KG GDS file**
 
-For the RNA samples, these 3 files are required:
+For the RNA profiles, these 3 files are required:
 
 1. The **Profile GDS file**
 2. The **1KG GDS file**
@@ -374,7 +387,7 @@ gdsProfile <- openfn.gds(fileProfile, readonly=FALSE)
 ## The current example is for a DNA sample
 ## In the case of RNA sample, the function needs different inputs
 ## such as the 1KG Annotation GDS file and
-## The 'blockID' should be as listed in the 1KG Annotation GDS file 
+## the 'blockID' should be as listed in the 1KG Annotation GDS file 
 ## for the gene annotation of the SNVs
 estimateAllelicFraction(gdsReference=gds, gdsProfile=gdsProfile,
                                         currentProfile=profileName,
@@ -386,7 +399,16 @@ closefn.gds(gdsProfile)
 closefn.gds(gds)
 ```
 
+<br>
+
 This step must be executed for each profile present in the study.
+
+The information is added into the 'lap' and 'segment' nodes:
+
+```{r graphStep26, echo=FALSE, fig.align="left", fig.cap="Step 2.6 - The information is added into the nodes in light blue.", out.width='100%', results='asis', warning=FALSE, message=FALSE}
+knitr::include_graphics("ProfileGDSdemo_after_estimateAllelicFraction.png")
+```
+
 
 <br>
 
@@ -406,9 +428,9 @@ Two inference parameters to be optimized:
 - _D_: the number of PCA components retained
 
 The accuracy is evaluated using a synthetic data set created from merging one 
-cancer profile with multiple 1KG samples of known ancestry. Using the synthetic 
-profiles, a range of _K_ and _D_ values are tested. Through that process, the 
-_K_ and _D_ values are tuned to maximize accuracy.
+cancer profile with multiple 1KG profiles of known ancestry. Using the 
+synthetic profiles, a range of _K_ and _D_ values are tested. Through that 
+process, the _K_ and _D_ values are tuned to maximize accuracy.
 
 This step consists of two sub-steps:
 
@@ -420,20 +442,20 @@ This step consists of two sub-steps:
 ### Sub-Step 3.1 Generate the synthetic dataset
 
 A synthetic profile is generated through the merging of one cancer profile 
-with one 1KG sample of known ancestry. Multiple 1KG samples of different 
+with one 1KG profile of known ancestry. Multiple 1KG profiles of different 
 ancestry are required to create a synthetic data set that will be able to 
 show the specific accuracy for each super-population. All the synthetic 
 profiles are saved in the **Profile GDS file** corresponding to the 
-cancer profile used to generate the synthetic data set.
+cancer profile used to generate the synthetic dataset.
 
-In summary, a fixed number of profiles for each super-population is extracted 
-from the 1KG study. The information is saved in the **Profile GDS file** 
+In summary, a fixed number of profiles for each super-population are extracted 
+from the 1KG study. The information is saved into the **Profile GDS file** 
 associated to the selected cancer profile. A synthetic profile is created for 
-each combination of one 1KG sample and cancer profile. All synthetic profiles 
-are then saved in the **Profile GDS file**.
+each combination of one 1KG profile and cancer profile. All synthetic profiles 
+are then saved into the **Profile GDS file**.
 
 The three functions _select1KGPop()_, _prepSynthetic()_ and _syntheticGeno()_ 
-are used for the synthetic data synthesis.
+are required to process the synthetic data synthesis step.
 
 These 3 files are required:
 
@@ -648,7 +670,7 @@ The PCA of the sample and KNN sample and Call the ancestry with the optimal
 _K_ and _D_ parameters.
 
 Note: The formal selection of _K_ and _D_ parameters is done at this step but 
-all the synthetic data are prepared in the step 3. 
+all the synthetic data are prepared in the previous step. 
 
 
 ```{r PCA.KNN.Sample, warning=FALSE, message=FALSE, collapse=TRUE, echo=TRUE, eval=TRUE}
