--- a/vignettes/Ancestry_Inference_Step_by_Step.Rmd
+++ b/vignettes/Ancestry_Inference_Step_by_Step.Rmd
@@ -316,21 +316,13 @@ There are alternative ways to retrieve this information, e.g.,
 ## Load required library
 ###################################################################
 library(BSgenome.Hsapiens.UCSC.hg38)
-
+library(GenomeInfoDb)
 ###################################################################
 ## The length of each chromosome is required
 ## Chromosomes X, Y and M need relabeling (see below)
 ## There are alternative ways to retrieve this information
 ###################################################################
-chrInfo <- integer(25L)
-for(i in seq_len(22L)) {
-    chrInfo[i] <- length(Hsapiens[[paste0("chr", i)]])
-}
-chrInfo[23] <- length(Hsapiens[["chrX"]])
-chrInfo[24] <- length(Hsapiens[["chrY"]])
-chrInfo[25] <- length(Hsapiens[["chrM"]])
-
-chrInfo
+chrInfo <- GenomeInfoDb::seqlengths(Hsapiens)[1:25]
 ```
 
 <br>
